# client-hw-info

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-please.yml  upload-release-assets.yml
assets/: gpu_vram.toml
assets/systemd/: client-hw-info.service  client-hw-info.timer
src/: auth.rs  config.rs  hardware.rs  heartbeat.rs  main.rs  self_register.rs  software.rs  system.rs
tests/: cli_tests.rs
